Fixing flex alignment in footer content

--- a/web/app/themes/plantchicago/assets/styles/components/_footer.scss
+++ b/web/app/themes/plantchicago/assets/styles/components/_footer.scss
@@ -14,18 +14,11 @@
   .main-column-right {
     @include min-screen($breakpoint-medium) {
       padding-right: 30px;
-
-      > .-inner {
-        align-items: flex-start;
-
-        > .content-left {
-          align-items: flex-start;
-        }
-      }
     }
 
     .grid {
       flex-wrap: wrap;
+      align-items: flex-start;
     }
 
     .content-left,
@@ -195,16 +188,15 @@
           margin-bottom: 36px;
         }
       }
+
+      .content-right {
+        align-items: flex-end;
+      }
     }
 
   }
 
   @include min-screen(1080px) {
-
-    .grid,
-    .flex-item {
-      align-items: flex-end;
-    }
 
     .main-column-right {
       .content-left,
